# dgs-resolution

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: test_and_deploy.yml  update-lockfile.yml
dashui/: app.py
dashui/arcs/: exp.py  model.py
dashui/cncs/: exp.py  model.py
dashui/hyspec/: exp.py
src/dgs_resolution/: app.py  convolution.py  resolution_plot.py
src/dgs_resolution/arcs/: __init__.py  configuration_widget.py  conv.py  elastic.py  exp.py  inelastic.py  model.py
src/dgs_resolution/assets/: stylesheet.css
src/dgs_resolution/cncs/: __init__.py  elastic.py  exp.py  inelastic.py  model.py
src/dgs_resolution/hyspec/: __init__.py  elastic.py  exp.py
src/dgs_resolution/phonon/: __init__.py
src/dgs_resolution/pychop/: Chop.py  ISISDisk.py  ISISFermi.py  Instruments.py  MulpyRep.py  PyChopGui.py  __init__.py
src/dgs_resolution/sequoia/: __init__.py  elastic.py  exp.py  inelastic.py  model.py
